# adventofcode

./: .gitignore  .gitmodules  Cargo.toml  README.md  watch.sh
aoc/: Cargo.toml
aoc/src/: get.rs  lib.rs  main.rs  post.rs
src/: lib.rs  tracing.rs
